# template-web-app-flask

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml  lints.yml  publish.yml  tests.yml
assets/: dummy_figure.dot  make_figures.sh
docs/: README.md  index.md
src/: config.py  manage.py
src/app/: __init__.py  auth.py  dashboard.py  forms.py  models.py
src/app/static/css/: main.css
src/app/static/images/: logo.dot  make_figures.sh
src/app/templates/: about.html  base.html  contact.html  dashboard.html  login.html  register.html
src/app/templates/errors/: 404.html  500.html
src/package/: module.py
tests/: conftest.py  test_app.py  test_module.py
