[project]
name = "template-web-app-flask"
version = "0.1.0"
description = "A template for a web application built with Flask"
authors = [
    { name = "Hassan Abedi", email = "hassan.abedi.t@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<4.0"

dependencies = [
    "python-dotenv>=1.1.0",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "sqlalchemy>=2.0.39",
    "sqlalchemy-utils>=0.41.2",
    "flask-sqlalchemy-cache>=0.1.5",
    "flask-migrate>=4.1.0",
    "flask-wtf>=1.2.2",
    "flask-admin>=1.6.1",
    "flask-login>=0.6.3",
    "flask-caching>=2.3.1",
    "flask-gravatar>=0.5.0",
    "flask-themes>=0.1.3",
    "flask-mail>=0.10.0",
    "flask-flatpages>=0.8.3",
    "flask-dropzone>=2.0.0",
    "flask-htmx>=0.4.0",
    "flask-restful>=0.3.10",
    "flask-reuploaded>=1.4.0",
    "flask-talisman>=1.1.0",
    "flask-injector>=0.15.0",
    "flask-graphql>=2.0.1",
    "flask-socketio>=5.5.1",
    "flask-limiter>=3.12",
    "flask-apscheduler>=1.13.1",
    "flask-compress>=1.17",
    "bootstrap-flask>=2.4.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.1",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-benchmark>=5.1.0",
    "mypy>=1.11.1",
    "ruff>=0.10.0",
    "pyright>=1.1.399"
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    #"--disable-warnings",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term",
    "--cov-report=xml",
    "-rs"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.coverage.run]
branch = true
parallel = true
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = false
skip_empty = true
precision = 2

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_return_any = true
strict_optional = true
warn_redundant_casts = true
exclude = "^(examples/|tests/)"

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".mypy_cache",
    ".nox", ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "venv",
    "tests"
]
line-length = 100
indent-width = 4
src = ["src"]
target-version = "py310"
unsafe-fixes = false

[tool.ruff.lint]
select = ["ANN", "E", "F", "I", "W", "B", "RUF", "SIM", "C90"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []
